--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-  <!-- Your code here -->
-
+  <img src= "https://s3.amazonaws.com/ironboard-learn/lion.jpg " >  <!-- Your code here -->
+ <img src = "https://s3.amazonaws.com/ironboard-learn/lion.jpg " alt=  " Hey Hey Hey">
+ <img src = "https://s3.amazonaws.com/ironboard-learn/lion.jpg " alt=  " Hey Hey Hey" title=" welp">
 </body>
 </html>
