--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+  <img src="https://www.twitch.tv/naspascrabble">
+  <img src="https://www.twitch.tv/naspascrabble" alt="Scrabble Streaming">
+  <img src="https://www.twitch.tv/naspascrabble" alt="Scrabble Streaming" title="NOLA 2020 Finals!">
 </body>
 </html>
